[workspace]

members = [
    "wolfssl",
    "wolfssl-sys",
]

resolver = "2"

[workspace.package]
edition = "2021"
authors = ["lightway-developers@expressvpn.com"]
license = "GPL-2.0-or-later"
repository = "https://github.com/expressvpn/wolfssl-rs"
keywords = ["wolfssl", "vpn", "lightway", "post-quantum", "cryptography"]

