[package]
name = "wolfssl-sys"
version = "2.0.0"
edition = "2021"
authors = ["lightway-developers@expressvpn.com"]
license = "GPL-2.0-or-later"
readme = "README.md"
description = "System bindings for WolfSSL"
repository = "https://github.com/expressvpn/wolfssl-rs"
keywords = ["wolfssl", "vpn", "lightway", "post-quantum", "cryptography"]
links = "wolfssl"
exclude = ["wolfssl-src/**/*.pdf"] # crates.io has a size limit for publishing. Exclude unused files to keep the size under the limit.

[build-dependencies]
bindgen = "0.70"
autotools = "0.2"
build-target = "0.4.0"

[dev-dependencies]
test-case = "3.0"

[features]
default = ["postquantum"]
debug = []
postquantum = []
kyber_only = ["postquantum"]

[[example]]
name = "connect_pq"
required-features = ["postquantum"]
