[package]
name = "wolfssl-sys"
version = "2.0.0"
description = "System bindings for WolfSSL"
readme = "README.md"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
links = "wolfssl"
exclude = ["wolfssl-src/**/*.pdf"] # crates.io has a size limit for publishing. Exclude unused files to keep the size under the limit.
edition.workspace = true

[build-dependencies]
bindgen = "0.71"
autotools = "0.2"
build-target = "0.7.0"

[dev-dependencies]
test-case = "3.0"

[features]
default = ["postquantum"]
debug = []
postquantum = []
kyber_only = ["postquantum"]

[[example]]
name = "connect_pq"
required-features = ["postquantum"]
