[package]
name = "wolfssl-sys"
version = "2.0.1"
description = "System bindings for WolfSSL"
readme = "README.md"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
links = "wolfssl"
exclude = ["wolfssl-src/**/*.pdf"] # crates.io has a size limit for publishing. Exclude unused files to keep the size under the limit.
edition.workspace = true

[build-dependencies]
bindgen = "0.72"
autotools = "0.2"
build-target = "0.8.0"

[target.'cfg(windows)'.build-dependencies]
msbuild = "0.2.0"

[dev-dependencies]
test-case = "3.0"

[features]
default = ["postquantum"]
debug = []
postquantum = []
kyber_only = ["postquantum"]
system_ca_certs = []

[[example]]
name = "connect_pq"
required-features = ["postquantum"]
