[package]
name = "wolfssl"
version = "2.0.0"
edition = "2021"
authors = ["lightway-developers@expressvpn.com"]
license = "GPL-2.0-only"
description = "High-level bindings for WolfSSL"
repository = "https://github.com/expressvpn/wolfssl-rs"
keywords = ["wolfssl", "vpn", "lightway", "post-quantum", "cryptography"]

[features]
default = ["postquantum"]
postquantum = ["wolfssl-sys/postquantum"]
debug = ["wolfssl-sys/debug"] # Note that application code must also call wolfssl::enable_debugging(true)

[lints.rust]
missing_docs = "deny"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_safety_comment = "deny"

[dependencies]
bytes = "1"
log = "0.4"
thiserror = "1.0"
wolfssl-sys = { path = "../wolfssl-sys", version = "1.2.0" }

[dev-dependencies]
async-trait = "0.1.73"
env_logger = "0.11.0"
test-case = "3.0"
tokio = { version = "1.31.0", features = ["rt", "net", "macros"] }
