[package]
name = "wolfssl"
version = "4.0.0"
description = "High-level bindings for WolfSSL"
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
edition.workspace = true

[features]
default = ["postquantum"]
postquantum = ["wolfssl-sys/postquantum"]
debug = ["wolfssl-sys/debug"] # Note that application code must also call wolfssl::enable_debugging(true)
kyber_only = ["wolfssl-sys/kyber_only"]
system_ca_certs = ["wolfssl-sys/system_ca_certs"]

[lints.rust]
missing_docs = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_unsafe = "deny"

[lints.clippy]
missing_safety_doc = "deny"
multiple_unsafe_ops_per_block = "deny"
undocumented_unsafe_blocks = "deny"
unnecessary_safety_comment = "deny"

[dependencies]
bytes = "1"
log = "0.4"
thiserror = "2.0"
wolfssl-sys = { path = "../wolfssl-sys", version = "3.0.0" }

[dev-dependencies]
async-trait = "0.1.73"
cfg-if = "1.0.4"
env_logger = "0.11.0"
test-case = "3.0"
tokio = { version = "1.31.0", features = ["rt", "net", "macros"] }
